Item name crash fix

--- a/Assets/GameItem.ini
+++ b/Assets/GameItem.ini
@@ -21,7 +21,7 @@
         "imageId": "1",
         "categoryId": "2",
         "costumeId": "0",
-        "name": "Condom",
+        "name": "コンドーム",
         "lot": "5",
         "max": "25",
         "price": "500",
@@ -38,7 +38,7 @@
         "imageId": "2",
         "categoryId": "2",
         "costumeId": "0",
-        "name": "After Pill",
+        "name": "アフターピル",
         "lot": "3",
         "max": "15",
         "price": "3000",
@@ -55,7 +55,7 @@
         "imageId": "3",
         "categoryId": "0",
         "costumeId": "0",
-        "name": "Coffee Beans",
+        "name": "コーヒー豆",
         "lot": "5",
         "max": "25",
         "price": "500",
@@ -72,7 +72,7 @@
         "imageId": "4",
         "categoryId": "0",
         "costumeId": "0",
-        "name": "Chamomile",
+        "name": "カモミール",
         "lot": "5",
         "max": "25",
         "price": "500",
@@ -89,7 +89,7 @@
         "imageId": "5",
         "categoryId": "2",
         "costumeId": "0",
-        "name": "Energizing Drink",
+        "name": "精力剤",
         "lot": "1",
         "max": "5",
         "price": "500",
@@ -106,7 +106,7 @@
         "imageId": "6",
         "categoryId": "2",
         "costumeId": "0",
-        "name": "Lotion Bottle",
+        "name": "ローション",
         "lot": "5",
         "max": "25",
         "price": "500",
@@ -123,7 +123,7 @@
         "imageId": "7",
         "categoryId": "2",
         "costumeId": "0",
-        "name": "Aphrodisiac Cream",
+        "name": "媚薬クリーム",
         "lot": "1",
         "max": "1",
         "price": "3000",
@@ -140,7 +140,7 @@
         "imageId": "8",
         "categoryId": "0",
         "costumeId": "0",
-        "name": "Fashion Magazine",
+        "name": "ファッション雑誌",
         "lot": "1",
         "max": "1",
         "price": "1000",
@@ -157,7 +157,7 @@
         "imageId": "9",
         "categoryId": "0",
         "costumeId": "0",
-        "name": "Adult Magazine",
+        "name": "アダルト雑誌",
         "lot": "1",
         "max": "1",
         "price": "1000",
@@ -174,7 +174,7 @@
         "imageId": "10",
         "categoryId": "0",
         "costumeId": "0",
-        "name": "Difficult Skill Book",
+        "name": "難しい技術書",
         "lot": "1",
         "max": "1",
         "price": "1000",
@@ -191,7 +191,7 @@
         "imageId": "11",
         "categoryId": "0",
         "costumeId": "0",
-        "name": "Simple Skill Book",
+        "name": "簡単な技術書",
         "lot": "1",
         "max": "1",
         "price": "1000",
@@ -208,7 +208,7 @@
         "imageId": "12",
         "categoryId": "0",
         "costumeId": "0",
-        "name": "Business Book",
+        "name": "ビジネス書",
         "lot": "1",
         "max": "1",
         "price": "2000",
@@ -225,7 +225,7 @@
         "imageId": "13",
         "categoryId": "0",
         "costumeId": "0",
-        "name": "Job Change Guide",
+        "name": "最新転職ガイド",
         "lot": "1",
         "max": "1",
         "price": "2000",
@@ -276,7 +276,7 @@
         "imageId": "16",
         "categoryId": "1",
         "costumeId": "3",
-        "name": "Pajamas",
+        "name": "パジャマ",
         "lot": "1",
         "max": "1",
         "price": "2400",
@@ -293,7 +293,7 @@
         "imageId": "17",
         "categoryId": "1",
         "costumeId": "4",
-        "name": "Cool Room Clothes",
+        "name": "涼しげな部屋着",
         "lot": "1",
         "max": "1",
         "price": "4900",
@@ -310,7 +310,7 @@
         "imageId": "18",
         "categoryId": "1",
         "costumeId": "5",
-        "name": "Gym Uniform",
+        "name": "体操着",
         "lot": "1",
         "max": "1",
         "price": "0",
@@ -327,7 +327,7 @@
         "imageId": "19",
         "categoryId": "1",
         "costumeId": "6",
-        "name": "Casual Clothing",
+        "name": "よそ行きの私服",
         "lot": "1",
         "max": "1",
         "price": "9800",
@@ -429,7 +429,7 @@
         "imageId": "25",
         "categoryId": "2",
         "costumeId": "0",
-        "name": "Pink Rotor",
+        "name": "ピンクローター",
         "lot": "1",
         "max": "1",
         "price": "1000",
@@ -463,7 +463,7 @@
         "imageId": "27",
         "categoryId": "2",
         "costumeId": "0",
-        "name": "Rotor",
+        "name": "バイブ",
         "lot": "1",
         "max": "1",
         "price": "4000",
@@ -497,7 +497,7 @@
         "imageId": "29",
         "categoryId": "2",
         "costumeId": "0",
-        "name": "Intro to Psychology",
+        "name": "心理学入門",
         "lot": "1",
         "max": "1",
         "price": "1000",
@@ -514,7 +514,7 @@
         "imageId": "30",
         "categoryId": "2",
         "costumeId": "0",
-        "name": "Maidens Secret",
+        "name": "乙女の秘密",
         "lot": "1",
         "max": "1",
         "price": "3000",
@@ -548,7 +548,7 @@
         "imageId": "32",
         "categoryId": "1",
         "costumeId": "201",
-        "name": "Hair Down",
+        "name": "セミロング",
         "lot": "1",
         "max": "1",
         "price": "0",
@@ -565,7 +565,7 @@
         "imageId": "33",
         "categoryId": "1",
         "costumeId": "202",
-        "name": "Low Twintails",
+        "name": "二つ結び",
         "lot": "1",
         "max": "1",
         "price": "0",
@@ -582,7 +582,7 @@
         "imageId": "34",
         "categoryId": "1",
         "costumeId": "203",
-        "name": "Ponytail",
+        "name": "ポニーテール",
         "lot": "1",
         "max": "1",
         "price": "0",
@@ -616,7 +616,7 @@
         "imageId": "36",
         "categoryId": "3",
         "costumeId": "0",
-        "name": "Full Completion",
+        "name": "フルコンプ",
         "lot": "1",
         "max": "1",
         "price": "0",
@@ -803,7 +803,7 @@
         "imageId": "37",
         "categoryId": "3",
         "costumeId": "0",
-        "name": "Cum from Insertion",
+        "name": "Cum from insertion",
         "lot": "1",
         "max": "1",
         "price": "0",
