--- a/Plugin/1roomTranslationTweaks/1roomTranslationTweaks.csproj
+++ b/Plugin/1roomTranslationTweaks/1roomTranslationTweaks.csproj
@@ -32,20 +32,20 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="0Harmony">
-      <HintPath>..\..\..\..\SVN\Mods\lib\0Harmony.dll</HintPath>
+      <HintPath>..\..\..\lib\0Harmony.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="Assembly-CSharp">
-      <HintPath>..\..\..\..\Downloads\H\_slg\1room -家出少女 v1.1.0\1room_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <HintPath>..\..\..\..\..\Downloads\H\_slg\1room -家出少女 v1.1.0\1room_Data\Managed\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="BepInEx">
-      <HintPath>..\..\..\..\SVN\Mods\lib\BepInEx.dll</HintPath>
+      <HintPath>..\..\..\lib\BepInEx.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System.Core" />
     <Reference Include="UnityEngine">
-      <HintPath>..\..\..\..\SVN\Mods\lib\UnityEngine.dll</HintPath>
+      <HintPath>..\..\..\lib\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
